k8s/infrastructure/traefik/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  selector:
    app.kubernetes.io/instance: traefik-traefik-traefik
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik
      port: 8080
      targetPort: traefik
