k8s/infrastructure/traefik/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    tailscale.com/hostname: traefik
spec:
  ingressClassName: tailscale
  rules:
    - host: traefik.xerus-augmented.ts.net
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik-traefik
                port:
                  name: traefik
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: traefik-traefik
                port:
                  name: traefik
